force-app/main/default/objects/PrintSerialNumber__c/PrintSerialNumber__c.object-meta.xml
<CustomObject>
    <label>印刷連番</label>
    <nameField>
        <label>印刷連番</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>