force-app/main/default/objects/PrintSerialNumber__c/fields/CaseId__c.field-meta.xml
<CustomField>
    <fullName>CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>カスタマーセンターコールデータ</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>印刷連番</relationshipLabel>
    <relationshipName>PrintSerialNumber</relationshipName>
    <type>Lookup</type>
</CustomField>