force-app/main/default/objects/PrintSerialNumber__c/fields/CaseLastModifiedByName__c.field-meta.xml
<CustomField>
    <fullName>CaseLastModifiedByName__c</fullName>
    <label>コールデータ更新者</label>
    <length>80</length>
    <type>Text</type>
</CustomField>