force-app/main/default/objects/PrintSerialNumber__c/fields/CommencementInsuranceWareki__c.field-meta.xml
<CustomField>
    <fullName>CommencementInsuranceWareki__c</fullName>
    <label>保険始期（和暦）</label>
    <length>7</length>
    <type>Text</type>
</CustomField>