force-app/main/default/objects/PrintSerialNumber__c/fields/Contract_InformationId__c.field-meta.xml
<CustomField>
    <fullName>Contract_InformationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約情報</label>
    <referenceTo>Contract_Information__c</referenceTo>
    <relationshipLabel>印刷連番</relationshipLabel>
    <relationshipName>PrintSerialNumber</relationshipName>
    <type>Lookup</type>
</CustomField>