force-app/main/default/objects/PrintSerialNumber__c/fields/DoReporting__c.field-meta.xml
<CustomField>
    <fullName>DoReporting__c</fullName>
    <defaultValue>true</defaultValue>
    <label>代理店報告リスト対象</label>
    <type>Checkbox</type>
</CustomField>