force-app/main/default/objects/PrintSerialNumber__c/fields/InsurancePeriodA__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriodA__c</fullName>
    <label>(Aプラン)保険終期</label>
    <length>7</length>
    <type>Text</type>
</CustomField>