force-app/main/default/objects/PrintSerialNumber__c/fields/InsurancePeriodB__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriodB__c</fullName>
    <label>(Bプラン)保険終期</label>
    <length>7</length>
    <type>Text</type>
</CustomField>