force-app/main/default/objects/PrintSerialNumber__c/fields/InsurancePeriodC__c.field-meta.xml
<CustomField>
    <fullName>InsurancePeriodC__c</fullName>
    <label>(Cプラン)保険終期</label>
    <length>7</length>
    <type>Text</type>
</CustomField>