force-app/main/default/objects/PrintSerialNumber__c/fields/PaymentMethodA__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethodA__c</fullName>
    <label>新払込方法（Aプラン）</label>
    <length>1</length>
    <type>Text</type>
</CustomField>