force-app/main/default/objects/PrintSerialNumber__c/fields/PaymentMethodB__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethodB__c</fullName>
    <label>新払込方法（Bプラン）</label>
    <length>1</length>
    <type>Text</type>
</CustomField>