force-app/main/default/objects/PrintSerialNumber__c/fields/PaymentMethodC__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethodC__c</fullName>
    <label>新払込方法（Cプラン）</label>
    <length>1</length>
    <type>Text</type>
</CustomField>