force-app/main/default/objects/PrintSerialNumber__c/fields/PaymentMethodTranslationA__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethodTranslationA__c</fullName>
    <label>(Aプラン)払込方法翻訳</label>
    <length>11</length>
    <type>Text</type>
</CustomField>