force-app/main/default/objects/PrintSerialNumber__c/fields/PaymentMethodTranslationB__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethodTranslationB__c</fullName>
    <label>(Bプラン)払込方法翻訳</label>
    <length>11</length>
    <type>Text</type>
</CustomField>