force-app/main/default/objects/PrintSerialNumber__c/fields/PaymentMethodTranslationC__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethodTranslationC__c</fullName>
    <label>(Cプラン)払込方法翻訳</label>
    <length>11</length>
    <type>Text</type>
</CustomField>