force-app/main/default/objects/PrintSerialNumber__c/fields/PdfFilePath__c.field-meta.xml
<CustomField>
    <fullName>PdfFilePath__c</fullName>
    <label>PDFファイルパス名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>