force-app/main/default/objects/PrintSerialNumber__c/fields/PolicyBranchNumber__c.field-meta.xml
<CustomField>
    <fullName>PolicyBranchNumber__c</fullName>
    <label>証券番号枝番</label>
    <length>5</length>
    <type>Text</type>
</CustomField>