force-app/main/default/objects/PrintSerialNumber__c/fields/ProcName__c.field-meta.xml
<CustomField>
    <fullName>ProcName__c</fullName>
    <label>処理名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>