force-app/main/default/objects/PrintSerialNumber__c/fields/ReportPlan__c.field-meta.xml
<CustomField>
    <fullName>ReportPlan__c</fullName>
    <label>代理店報告リスト対象プラン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ａプラン</fullName>
                <default>true</default>
                <label>Ａプラン</label>
            </value>
            <value>
                <fullName>Ｂプラン</fullName>
            </value>
            <value>
                <fullName>Ｃプラン</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>