force-app/main/default/objects/PrintSerialNumber__c/fields/SumInsuranceFeeA__c.field-meta.xml
<CustomField>
    <fullName>SumInsuranceFeeA__c</fullName>
    <label>(Aプラン)合計保険料</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>