force-app/main/default/objects/PrintSerialNumber__c/fields/SumInsuranceFeeB__c.field-meta.xml
<CustomField>
    <fullName>SumInsuranceFeeB__c</fullName>
    <label>(Bプラン)合計保険料</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>