force-app/main/default/objects/PrintSerialNumber__c/fields/SumInsuranceFeeC__c.field-meta.xml
<CustomField>
    <fullName>SumInsuranceFeeC__c</fullName>
    <label>(Cプラン)合計保険料</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>