force-app/main/default/objects/PrintSerialNumber__c/fields/TotalInsuranceFeeA__c.field-meta.xml
<CustomField>
    <fullName>TotalInsuranceFeeA__c</fullName>
    <label>(Aプラン)総額保険料</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>