force-app/main/default/objects/PrintSerialNumber__c/fields/TotalInsuranceFeeB__c.field-meta.xml
<CustomField>
    <fullName>TotalInsuranceFeeB__c</fullName>
    <label>(Bプラン)総額保険料</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>