force-app/main/default/objects/PrintSerialNumber__c/fields/TotalInsuranceFeeC__c.field-meta.xml
<CustomField>
    <fullName>TotalInsuranceFeeC__c</fullName>
    <label>(Cプラン)総額保険料</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>