force-app/main/default/objects/PrintSerialNumber__c/fields/TransferDate__c.field-meta.xml
<CustomField>
    <fullName>TransferDate__c</fullName>
    <label>異動日</label>
    <length>7</length>
    <type>Text</type>
</CustomField>